# ntxdemo

./: .gitignore  Cargo.toml  README.md  build.rs  cmds.md
plugins/: core.rs
plugins/core/: Cargo.toml
plugins/core/src/: lib.rs
plugins/demo/: Cargo.toml  main.c
plugins/demo/src/: lib.rs
plugins/http-client/: Cargo.toml  http_client.rs
plugins/http-client/src/: bindings.rs  lib.rs
plugins/http-client/wit/: world.wit
plugins/http-send/: Cargo.toml  example.rs  http_send.wasm  run.sh
plugins/http-send/.config/: config.toml
plugins/http-send/src/: lib.rs
plugins/http-send/wit/: main.rs  world.wit
plugins/mvp/: core_libs.rs
plugins/mvp/corelib/: Cargo.toml
plugins/mvp/corelib/src/: lib.rs
plugins/mvp/corelib/src/call_model/: mod.rs
plugins/mvp/corelib/src/logger/: mod.rs
plugins/mvp/corelib/src/progress/: mod.rs
plugins/mvp/corelib/src/random/: mod.rs
plugins/mvp/corelib/src/timer/: mod.rs
plugins/mvp/docs/: design.md  mvp.md
plugins/mvp/wit/: README.md  protocol.wit  types.wit
plugins/mvp/wit/core-libs/: core-libs.wit  deps.toml  progress-bridge.wit
plugins/mvp/wit/core-scheduler/: core-scheduler.wit
plugins/mvp/wit/protocol/: protocol.wit
plugins/runner/: Cargo.toml  build.sh  run.sh  runner.rs  runner.wasm
plugins/runner/docs/: draft.md  http_scenario.yaml  process.txt  roadmap.md  tools.md
plugins/runner/docs/plan/: actor.md  baseline.md  component_framework.md  feature_flags.md  module_plan.md  runbook.md  sparse_model.md
plugins/runner/docs/plan/mvp/: core_runtime.rs  protocol_frame_world.rs  (+2 more)
plugins/runner/docs/testing/: strategy.md
plugins/runner/src/: lib.rs  macros.rs  mywasi.rs  polling.rs  runtime.rs  time.rs
plugins/runner/wit/: progress.wit  world.wit
plugins/scheduler/: COMPONENT_STATUS.md  Cargo.toml  NEXT_STEPS.md  README.md  USAGE.md  WASM_COMPONENT_STATUS.md  scheduler-composition.wac
plugins/scheduler/actions-http/: ARCHITECTURE.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IP_POOL_INTEGRATION.md  QUICK_REFERENCE.md  build.sh  test_component.sh
plugins/scheduler/actions-http/examples/: ip_pool_integration.rs
plugins/scheduler/actions-http/src/: bindings.rs  component.rs  http_client.rs  lib.rs
plugins/scheduler/actions-http/wit/: deps.toml  world.wit
plugins/scheduler/composed/: deps.toml  http-with-socket.wac  scheduler-command.wac  scheduler-full.wac  world.wit
plugins/scheduler/core-libs/: Cargo.toml  MODULE_STRUCTURE.md  build.sh
plugins/scheduler/core-libs/doc/: IP_MODULE_SUMMARY.md  IP_POOL_USAGE.md  IP_QUICKSTART.md  SOCKET_INTEGRATION_SUMMARY.md  SOCKET_IP_INTEGRATION.md  SOCKET_QUICK_REFERENCE.md  WASI_SOCKET_IMPLEMENTATION.md
plugins/scheduler/core-libs/examples/: ip_pool_examples.rs  socket_with_ip_pool.rs
plugins/scheduler/core-libs/src/: README.md  bindings.rs  component.rs  error.rs  lib.rs
plugins/scheduler/core-libs/src/dsl/: mod.rs
plugins/scheduler/core-libs/src/error/: mod.rs
plugins/scheduler/core-libs/src/ip/: mod.rs
plugins/scheduler/core-libs/src/socket/: api.rs  mod.rs  socket_mixed.rs.bak  socket_stub.rs  wasi_impl.rs  wasi_impl_real.rs  wasi_stub.rs
plugins/scheduler/core-libs/src/state_machine/: mod.rs
plugins/scheduler/core-libs/src/wbs/: mod.rs
plugins/scheduler/core-libs/wit/: deps.toml  world.wit
plugins/scheduler/doc/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  COMPONENTS.md  DEPENDENCY_UPGRADE.md  DIRECTORY_STRUCTURE.md  FILE_INDEX.md  IMPLEMENTATION_GUIDE.md  INDEX.md  LOAD_TESTING_DESIGN.md  LOAD_TESTING_README.md  LOAD_TESTING_SUMMARY.md  QUICKSTART.md  REORGANIZATION_REPORT.md  SOCKET_API_USAGE.md  SOCKET_INTEGRATION.md  SOCKET_WASM_IMPLEMENTATION.md  SUMMARY.md  USAGE.md  WAC_COMPOSITION.md  WIT_BINDGEN_0.48_FIXES.md  draft.md
plugins/scheduler/docs/: HTTP_COMPONENT_INTEGRATION.md  WHY_REQWEST.md
plugins/scheduler/examples/: Cargo.toml  use_unified.rs
plugins/scheduler/executor/: Cargo.toml  build.sh
plugins/scheduler/executor/src/: bindings.rs  component.rs  lib.rs
plugins/scheduler/executor/wit/: deps.toml  world.wit
plugins/scheduler/res/: http_load_medium.yaml  http_scenario.yaml  http_test_real.yaml  load_test_advanced.yaml  load_test_simple.yaml  simple_scenario.yaml
plugins/scheduler/scheduler/: Cargo.toml  scheduler-composed.wac  test_scenario.yaml  test_simple.yaml
plugins/scheduler/scheduler/examples/: run_scheduler.rs
plugins/scheduler/scheduler/src/: bindings.rs  component.rs  engine.rs  ip_manager.rs  lib.rs  main.rs  template.rs  user.rs  utils.rs
plugins/scheduler/scheduler/wit/: world.wit
plugins/scheduler/scripts/: build_all_components.sh  compose.sh  compose_demo.sh  compose_full.sh  create_unified.sh  run_wasi_manual.sh  run_wasi_smoke.sh  test_unified.sh
plugins/scheduler/src/: dsl.rs  engine.rs  error.rs  executor.rs  lib.rs  main.rs  state_machine.rs  wbs.rs  workbook.rs
plugins/scheduler/wac/: composition.wac  unified-simple.wac
plugins/tcp-client/: Cargo.toml  build.sh  run.sh
plugins/tcp-client/src/: lib.rs
plugins/wac/: build.sh  core.wasm  demo.wac  demo.wasm  run.sh  tcp_client.wasm
plugins/wit/: deps.toml  http-client.wit  tcp-client.wit
src/: main.rs
wit/: ftp-component.wit  http-component.wit
(+3 files in other folders)
