[package]
name = "http-send"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = "0.47.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:http-send"

[package.metadata.component.dependencies]