[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"
default-run = "scheduler"

[package.metadata.component]
package = "component:scheduler"

[package.metadata.component.dependencies]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
anyhow = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
axum = "0.7"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
ctrlc = "3.4"
