[package]
name = "scheduler-actions-http"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
indexmap = "2.6"
scheduler-core = { path = "../core-libs" }
scheduler-executor = { path = "../executor" }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
wit-bindgen = { version = "0.48", features = ["realloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3.1.3", features = ["json"] }

[package.metadata.component]
package = "scheduler:actions-http"

[package.metadata.component.target]
path = "wit"
