[package]
name = "scheduler-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
wit-bindgen = { version = "0.38", features = ["realloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4"

[package.metadata.component]
package = "scheduler:core-libs"

[package.metadata.component.target]
path = "wit"
