[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"
default-run = "scheduler"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "scheduler:main"

[package.metadata.component.target]
path = "wit"
world = "scheduler-component"

[dependencies]
anyhow = "1.0"
indexmap = "2.6"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
scheduler-core = { path = "../core-libs" }
scheduler-executor = { path = "../executor" }
scheduler-actions-http = { path = "../actions-http" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { version = "0.48", features = ["realloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
ctrlc = "3.4"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "time"] }
